NGP-TWC/wdp-abstract-canvas#1737 Fixed alignment and offset issues in… (#1897)
* NGP-TWC/wdp-abstract-canvas#1737 Fixed alignment and offset issues in tables generated by expression builder.

* NGP-TWC/wdp-abstract-canvas#1737 Fixed pull request comments by Terry -- spaced out div element, fixed scan vs span inconsistency and changed createLabelObject() to createContentObject().

* NGP-TWC/wdp-abstract-canvas#1737 Fixed grunt issues and fields and values table offset issue.

* NGP-TWC/wdp-abstract-canvas#1737 Fixed field and values table offset in expression builder.

--- a/canvas_modules/common-canvas/src/common-properties/controls/expression/expression-builder/expression-builder.scss
+++ b/canvas_modules/common-canvas/src/common-properties/controls/expression/expression-builder/expression-builder.scss
@@ -111,9 +111,3 @@ $operator-margin: 50%;
 	width: 50%;
 	margin-bottom: 2px;
 }
-
-.table-row {
-	> :first-child {
-		margin-left: $table-column-left-padding;
-	}
-}
